--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
         request.onclick = () => {
             if (url.value) {
                 hasRequestDone = false
+                progressBar.style.display = ''
                 const linkRegex = /^https:\/\/(?:www\.)?minecraft\.net\/.+\/article\//
                 if (url.value.match(linkRegex)) {
                     url.value = url.value.replace(linkRegex, 'https://www.minecraft.net/en-us/article/')
