--- a/index.html
+++ b/index.html
@@ -262,7 +262,12 @@
 
         function getArticles() {
             const xhr = new XMLHttpRequest()
-            xhr.open('GET', 'https://gitee.com/kakagou/minecraft.net-translations/raw/master/rawtable.csv', true)
+            // https://stackoverflow.com/questions/43871637/no-access-control-allow-origin-header-is-present-on-the-requested-resource-whe
+            xhr.open(
+                'GET',
+                'https://cors-anywhere.herokuapp.com/' + 'https://gitee.com/kakagou/minecraft.net-translations/raw/master/rawtable.csv',
+                true
+            )
             xhr.onreadystatechange = () => {
                 if (xhr.readyState === 4) {
                     if (xhr.status === 200) {
